# pico-examples

./: CMakeLists.txt
hang/: CMakeLists.txt  hang.c
multicore/: CMakeLists.txt
multicore/hello_multicore/: CMakeLists.txt  multicore.c
multicore/multicore_hang/: CMakeLists.txt  multicore.c
tools/: flash
